--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.27.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.13.0"
   },
   "devDependencies": {
