--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.14.1",
     "axios": "^1.7.7",
+    "dompurify": "^3.3.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.13.0"
