--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dompurify": "^3.3.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.6.0",
